# pkg

./: CMakeLists.txt
.github/workflows/: hosted_runners.yml
assets/: Readme.txt  license.txt  welcome.txt
macpack/opt/osquery/osquery.app/Contents/: Info.plist
platform/: common.cmake
platform/macos/: common.cmake  productbuild.cmake
platform/windows/: common.cmake  wix.cmake
windowspackage/control/msi/: osquery_wix_patch.xml
